# ChangeLog for sys-apps/portage
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Id$

*portage-2.2.00.14813 (13 Nov 2009)

  13 Nov 2009; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.14487.ebuild, +portage-2.2.00.14813.ebuild:
  Bump, restore bash-3 compatability, no longer provide ld.so.conf file for
  offset installs

*portage-2.2.00.14771 (01 Nov 2009)

  01 Nov 2009; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.14748-r1.ebuild,
  -files/portage-2.2.00.14748-fix-crash-on-new-cat-install.patch,
  +portage-2.2.00.14771.ebuild:
  Bump, including proper fix replacing the new category crash hack. This
  version resembles portage-2.2_rc48.

*portage-2.2.00.14748-r1 (31 Oct 2009)

  31 Oct 2009; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.14748.ebuild, +portage-2.2.00.14748-r1.ebuild,
  +files/portage-2.2.00.14748-fix-crash-on-new-cat-install.patch:
  Add fix for bug #291271, Portage crashing on installing new categories,
  separate patch because I expect this not going to be the final patch, so
  at least fix the problem for now

*portage-2.2.00.14748 (30 Oct 2009)

  30 Oct 2009; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.00.14746.ebuild,
  -files/portage-2.2.00.14746-aix-finetuning.patch,
  +portage-2.2.00.14748.ebuild:
  Replace 2.2.00.14746 with 2.2.00.14748 that includes the additional fixes
  for AIX, and fixes accidential aix QA code being run on ELF platforms

  30 Oct 2009; Michael Haubenwallner <haubi@gentoo.org>
  -portage-2.2.00.14724.ebuild,
  -files/portage-2.2.00.14724-aix-preservelibs.patch,
  -files/portage-2.2.00.14724-aix-qa.patch:
  dropped

  30 Oct 2009; Michael Haubenwallner <haubi@gentoo.org>
  portage-2.2.00.14724.ebuild,
  -files/portage-2.2.00.14724-aix-finetuning.patch,
  portage-2.2.00.14746.ebuild,
  +files/portage-2.2.00.14746-aix-finetuning.patch:
  added fine tuning/fixes for preserve-libs feature for AIX for 14746,
  dropped from 14724

*portage-2.2.00.14746 (30 Oct 2009)
