@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+*portage-2.2.00.14896 (26 Nov 2009)
+
+  26 Nov 2009; Fabian Groffen <grobian@gentoo.org>
+  +portage-2.2.00.14896.ebuild:
+  New revision, this one is equal to portage-2.2_rc52 feature wise.
+
 *portage-2.2.00.14813 (13 Nov 2009)
 
   13 Nov 2009; Fabian Groffen <grobian@gentoo.org>
